scenarios/crashloopbackoff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: inveon-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "exit 1"]
          ports:
            - containerPort: 9090
