scenarios/service-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: inveon-demo
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - name: http
      port: 80
      targetPort: 9999
