scenarios/ingress-404-502.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: inveon-demo
spec:
  ingressClassName: nginx
  rules:
    - host: linkding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkservice
                port:
                  number: 80
